openshift/projects/logging/routes/logging-kibana.yml
apiVersion: v1
kind: Route
metadata:
  creationTimestamp: null
  labels:
    component: support
    logging-infra: support
    provider: openshift
  name: logging-kibana
spec:
  host: kibana.apps008.amosdemo.io
  tls:
    caCertificate: |
      -----BEGIN CERTIFICATE-----
      MIIC2jCCAcKgAwIBAgIBATANBgkqhkiG9w0BAQsFADAeMRwwGgYDVQQDExNsb2dn
[...]
      LT8jkYgXKecffgDl6TY=
      -----END CERTIFICATE-----
    destinationCACertificate: |
      -----BEGIN CERTIFICATE-----
      MIIC2jCCAcKgAwIBAgIBATANBgkqhkiG9w0BAQsFADAeMRwwGgYDVQQDExNsb2dn
[...]
      LT8jkYgXKecffgDl6TY=
      -----END CERTIFICATE-----
    insecureEdgeTerminationPolicy: Redirect
    termination: reencrypt
  to:
    kind: Service
    name: logging-kibana
    weight: 100
  wildcardPolicy: None
status:
  ingress:
  - conditions:
    - lastTransitionTime: 2018-09-21T12:23:59Z
      status: "True"
      type: Admitted
    host: kibana.apps008.amosdemo.io
    routerName: router
    wildcardPolicy: None
